sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_depart_false/errors.duarouter
Error: Invalid departure time for vehicle '1';
 must be one of ("triggered", "containerTriggered", "now", or a float >= 0)
Quitting (on error).
